Fixed ' On the Successes page is there any reason why there is a huge gap between the video and the section below it?'

--- a/css/altres.css
+++ b/css/altres.css
@@ -1203,7 +1203,7 @@ blockquote.align-left {
 
 .view-video-showcase {
 	width: 715px;
-	height: 350px;
+	height: 289px;
 }
 
 .view-video-showcase .views_slideshow_main {
@@ -1211,7 +1211,7 @@ blockquote.align-left {
 }
 
 .view-video-showcase .views-slideshow-controls-bottom {
-	width: 225px;
+	width: 222px;
 	float: right;
 	position: relative;
 }
